be/feat: add swagger schemas for authorization and userEmail headers
